# jugadbase

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  LICENCE.md  README.md  build.sh  o  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: database-ci.yml
.next/: app-build-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/app/page/: app-build-manifest.json  next-font-manifest.json
.next/server/chunks/ssr/: [root of the server]__012ba519._.js  _2eea1caa._.js  _519aa6d1._.js  _f04daa50._.js
.next/static/chunks/: [root of the server]__98144f0b._.css  app_globals_73c37791.css  app_globals_b52d8e88.css  app_layout_tsx_e936f940._.js  node_modules_next_dist_client_ce20a02f._.js
app/: globals.css  layout.tsx  page.tsx
app/auth/login/: page.tsx
app/docs/: page.tsx
app/docs/[category]/: page.tsx
app/docs/[category]/[subpage]/: page.tsx
app/docs/[category]/[subpage]/[subsubpage]/: page.tsx
app/ui/: DocsComponent.tsx  DocsMarkdown.css  DocsSidebar.tsx  Hero.css  Hero.tsx  Navbar.tsx
db/: CMakeLists.txt  build.sh
db/src/: cli.c
db/src/db/: context.c  context.h  executor.c  executor.h  io.c  io.h  lexer.c  parser.c  parser.h  token.h
db/test/: create.c  test_create.c
db/test/scripts/: agg.jql  alter.jcl  create.jcl  insert.jql  join.jql  read_schema.py  srt.jql  update.jql  where.jql
docs/: config.json  index.md
docs/intro/: index.md
examples/: count.jql  create.jcl  delete.jql
examples/scripts/: mass_event_insert.py  toast_entries.py  toast_text.py
src/: cli.c  core.jcl  server.c
src/coco/: Cargo.toml  README.md
src/db/: btree.c  btree.h  cli.c  cluster.c  cluster.h  context.c  context.h  core.jcl  database.c  database.h  datetime.c  datetime.h  executor.c  executor.h  fs.c  fs.h  functions.c  functions.h  io.c  io.h  lexer.c  lexer.h  page.c  page.h  parser.c  parser.h  server.c  storage.c  storage.h  toast.c  toast.h  token.h  wal.c  wal.h
src/db/internal/: btree.c  btree.h  datetime.c  datetime.h  functions.c  functions.h  toast.c  toast.h
src/db/kernel/: commands.c  constraints.c  core.c  executor.h  expression.c  kernel.c  kernel.h  schema.c  sequence.c  utils.c  wal.c
src/db/parser/: clauses.c  core.c  expression.c  lexer.c  lexer.h  parser.c  parser.h  statements.c  token.h
src/db/storage/: cluster.c  cluster.h  database.c  database.h  fs.c  fs.h  storage.c  storage.h  wal.c  wal.h
src/db/utils/: bit128.h  cli.h  io.c  jb_core.h  jugadline.h  security.h  setup.c  setup.h  testing.h  uuid.h
src/scripts/: create.jcl
src/utils/: cli.h  jugadline.h  log.c  log.h  testing.h
src/viie/: Cargo.toml  README.md
src/viie/src/: db.rs  embedding.rs  index.rs  main.rs  vector.rs
src/viie/src/chunker/: audio.rs  image.rs  mod.rs  text.rs  video.rs
src/web/: README.md  tailwind.config.ts
src/web/app/: page.tsx
test/: test_create.c  test_runner.c
test/unit/: test_array.c  test_combined_select.c  test_create_table.c  test_delete.c  test_insert_select.c  test_insert_simple_select.c  test_select_in_between.c  test_select_like.c  test_select_limit.c  test_select_offset.c  test_select_order.c  test_simple_select.c  test_update.c
