[package]
name = "viie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
ndarray = "0.15.4"
once_cell = "1.21.3"
rand = "0.9.1"
reqwest = {version = "0.12.15", features = ["json", "blocking", "rustls-tls"]}
rust-bert = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.17.0"
tokio = "1.44.2"

[dev-dependencies]
mockito = "1.7.0"
