[package]
name = "viie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
image = "0.25.6"
ndarray = "0.15.4"
num-traits = "0.2.19"
once_cell = "1.21.3"
opencv = "0.94.4"
rand = "0.9.1"
reqwest = {version = "0.12.15", features = ["json", "blocking", "rustls-tls"]}
rust-bert = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.17.0"
tokio = "1.44.2"

[dev-dependencies]
mockito = "1.7.0" 
